Upgrade LMM Application for Security Vulnerabilities (#1232)
This PR addressed the following high and medium-risk security
vulnerabilities:
- https://github.com/nvidia-holoscan/holohub/security/dependabot/79
- https://github.com/nvidia-holoscan/holohub/security/dependabot/76
- https://github.com/nvidia-holoscan/holohub/security/dependabot/75
- https://github.com/nvidia-holoscan/holohub/security/dependabot/71

<!-- This is an auto-generated comment: release notes by coderabbit.ai
-->
## Summary by CodeRabbit

* **Chores**
* Updated copyright year to 2025 and refreshed/pinned several Python
library versions for compatibility.

* **Refactor**
* Simplified embedding configuration to use global settings and
streamlined index construction.
* Expanded GPU support by adding additional CUDA architectures for
improved acceleration.

* **Bug Fixes**
* Replaced PDF reader library with a newer implementation for more
reliable PDF handling.

<sub>✏️ Tip: You can customize this high-level summary in your review
settings.</sub>
<!-- end of auto-generated comment: release notes by coderabbit.ai -->

---------

Signed-off-by: B Hashemian <3968947+bhashemian@users.noreply.github.com>
Signed-off-by: M Q <mingmelvinq@nvidia.com>
Co-authored-by: M Q <mingmelvinq@nvidia.com>
Signed-off-by: eagostini <eagostini@nvidia.com>

--- a/applications/ehr_query_llm/lmm/Dockerfile
+++ b/applications/ehr_query_llm/lmm/Dockerfile
@@ -1,6 +1,6 @@
 # syntax=docker/dockerfile:1
 
-# SPDX-FileCopyrightText: Copyright (c) 2022-2024 NVIDIA CORPORATION & AFFILIATES. All rights reserved.
+# SPDX-FileCopyrightText: Copyright (c) 2022-2025 NVIDIA CORPORATION & AFFILIATES. All rights reserved.
 # SPDX-License-Identifier: Apache-2.0
 #
 # Licensed under the Apache License, Version 2.0 (the "License");
@@ -53,7 +53,7 @@ RUN git clone https://github.com/ggerganov/llama.cpp.git \
     && git checkout be36bb946a6336238e92706464de6a30495fe825 \
     && mkdir build \
     && cd build \
-    && cmake .. -DLLAMA_CUBLAS=ON \
+    && cmake .. -DLLAMA_CUBLAS=ON -DCMAKE_CUDA_ARCHITECTURES="75;80;86;89;90" \
     && LLAMA_CUDA_F16=true cmake --build . --config Release
 
 # Install Torch based on the specified architecturea, and if not specified, host's
