--- a/applications/ehr_query_llm/lmm/requirements.txt
+++ b/applications/ehr_query_llm/lmm/requirements.txt
@@ -8,19 +8,20 @@ websockets==12.0
 asyncio==3.4.3
 pyzmq~=26.0
 chromadb==0.6.3
-langchain==0.3.21
-langchain-community==0.3.20
+langchain==0.3.27
+langchain-community==0.3.31
+langchain-core==0.3.79
 sentence-transformers==4.0.1
 jq==1.6.0
 ragas==0.2.14
-llama_index==0.12.26
+llama_index==0.14.8
 simsimd==3.7.7
 pdf2image==1.17.0
 pdfminer==20191125
 pdfminer.six==20250324
 opencv-python==4.11.0.86
 pikepdf==9.5.2
-pypdf==5.4.0
+pypdf==6.2.0
 poppler-utils==0.1.0
 markdown==3.5.2
 fhir.resources~=7.1.0
